--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "react-native-dropdown-picker": "^5.4.6"
   }
 }
